--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service                                                             
 metadata:                                                                 
-  name: jonas-nginx-demo
+  name: thaiha-nginx-demo
   labels:
-    app: jonas-nginx-demo
+    app: thaiha-nginx-demo
 spec:
   type: ClusterIP
   ports:
@@ -11,4 +11,4 @@ spec:
     targetPort: 5000
     protocol: TCP
   selector:
-    app: jonas-nginx-demo
+    app: thaiha-nginx-demo
